<?xml version="1.0" encoding="UTF-8"?><resources><string name="module164string0">module164string0</string>
<string name="module164string1">module164string1</string>
<string name="module164string2">module164string2</string>
<string name="module164string3">module164string3</string>
<string name="module164string4">module164string4</string>
<string name="module164string5">module164string5</string>
<string name="module164string6">module164string6</string>
<string name="module164string7">module164string7</string>
<string name="module164string8">module164string8</string>
<string name="module164string9">module164string9</string>
<string name="module164string10">module164string10</string>
<string name="module164string11">module164string11</string>
<string name="module164string12">module164string12</string>
<string name="module164string13">module164string13</string>
<string name="module164string14">module164string14</string>
<string name="module164string15">module164string15</string>
<string name="module164string16">module164string16</string>
<string name="module164string17">module164string17</string>
<string name="module164string18">module164string18</string>
<string name="module164string19">module164string19</string>
<string name="module164string20">module164string20</string>
<string name="module164string21">module164string21</string>
<string name="module164string22">module164string22</string>
<string name="module164string23">module164string23</string>
<string name="module164string24">module164string24</string>
<string name="module164string25">module164string25</string>
<string name="module164string26">module164string26</string>
<string name="module164string27">module164string27</string>
<string name="module164string28">module164string28</string>
<string name="module164string29">module164string29</string>
<string name="module164string30">module164string30</string>
<string name="module164string31">module164string31</string>
<string name="module164string32">module164string32</string>
<string name="module164string33">module164string33</string>
<string name="module164string34">module164string34</string>
<string name="module164string35">module164string35</string>
<string name="module164string36">module164string36</string>
<string name="module164string37">module164string37</string>
<string name="module164string38">module164string38</string>
<string name="module164string39">module164string39</string>
<string name="module164string40">module164string40</string>
<string name="module164string41">module164string41</string>
<string name="module164string42">module164string42</string>
<string name="module164string43">module164string43</string>
<string name="module164string44">module164string44</string>
<string name="module164string45">module164string45</string>
<string name="module164string46">module164string46</string>
<string name="module164string47">module164string47</string>
<string name="module164string48">module164string48</string>
<string name="module164string49">module164string49</string>
<string name="module164string50">module164string50</string>
<string name="module164string51">module164string51</string>
<string name="module164string52">module164string52</string>
<string name="module164string53">module164string53</string>
<string name="module164string54">module164string54</string>
<string name="module164string55">module164string55</string>
<string name="module164string56">module164string56</string>
<string name="module164string57">module164string57</string>
<string name="module164string58">module164string58</string>
<string name="module164string59">module164string59</string>
<string name="module164string60">module164string60</string>
<string name="module164string61">module164string61</string>
<string name="module164string62">module164string62</string>
<string name="module164string63">module164string63</string>
<string name="module164string64">module164string64</string>
<string name="module164string65">module164string65</string>
<string name="module164string66">module164string66</string>
<string name="module164string67">module164string67</string>
</resources>